--- a/2022M03/(3) Homework  DDL-20220930-2359.md
+++ b/2022M03/(3) Homework  DDL-20220930-2359.md
@@ -20,8 +20,8 @@
 请大家认真研究上述过程，这可以对PostgreSQL的数据导入原理有深入了解。
 
 **参考资料：**
-1. [PostgreSQL示例数据库dvdrental](obsidian://open?vault=Teaching%20Assistant&file=DB2022FALL%2FResources%2FPostgreSQL%E7%A4%BA%E4%BE%8B%E6%95%B0%E6%8D%AE%E5%BA%93dvdrental)
-2. [PostgreSQL - psql（客户端交互命令)](obsidian://open?vault=Teaching%20Assistant&file=DB2022FALL%2FResources%2FPostgreSQL%20-%20psql%EF%BC%88%E5%AE%A2%E6%88%B7%E7%AB%AF%E4%BA%A4%E4%BA%92%E5%91%BD%E4%BB%A4%EF%BC%89)
-3. [Load PostgreSQL Sample Database](obsidian://open?vault=Teaching%20Assistant&file=DB2022FALL%2FResources%2FLoad%20PostgreSQL%20Sample%20Database.pdf)
+1. [PostgreSQL示例数据库dvdrental](https://github.com/njnucsta2022/DB2022FALL/blob/6b8f111aa13b3a5315adf769fad78a3ac50d446b/Resources/PostgreSQL%E7%A4%BA%E4%BE%8B%E6%95%B0%E6%8D%AE%E5%BA%93dvdrental.md)
+2. [PostgreSQL - psql（客户端交互命令)](https://github.com/njnucsta2022/DB2022FALL/blob/6b8f111aa13b3a5315adf769fad78a3ac50d446b/Resources/PostgreSQL%20-%20psql%EF%BC%88%E5%AE%A2%E6%88%B7%E7%AB%AF%E4%BA%A4%E4%BA%92%E5%91%BD%E4%BB%A4%EF%BC%89.md)
+3. [Load PostgreSQL Sample Database](https://github.com/njnucsta2022/DB2022FALL/blob/6b8f111aa13b3a5315adf769fad78a3ac50d446b/Resources/Load%20PostgreSQL%20Sample%20Database.pdf)
 
 答疑邮箱：gu@njnu.edu.cn , title: 【19200100 王海康】关于“xxx 的问题”。
