--- a/2022M01/(1) Homework  DDL-20220901-2359.md
+++ b/2022M01/(1) Homework  DDL-20220901-2359.md
@@ -1,12 +1,12 @@
 # 【2022M01】数据库原理课后练习 作业要求： 
-（1） 作业分为书面作业与灵活作业，所有的书面作业都必须留痕递交； 
-（2） 第一次作业以邮件方式递交，后续代码类作业将使用 commit 到 GitHub； 
-（3） 所有的作业（书面递交标注（R）的，无标记不用递交）
+1. 作业分为书面作业与灵活作业，所有的书面作业都必须留痕递交； 
+2. 第一次作业以邮件方式递交，后续代码类作业将使用 commit 到 GitHub； 
+3. 所有的作业（书面递交标注（R）的，无标记不用递交）
 
-	① 【截止时间】请于：2022 年 09 月 01 日 23：59（GMT+8）
+	① 【截止时间】请于：==2022 年 09 月 01 日 23：59（GMT+8）==
 	② 【递交方式】递交到：gu.lectures@gmail.com, cc: 19190232@njnu.edu.cn
-	③ 【递交要求】title：【19200100 王海康】数据库 2022M01 作业 注意：邮件 title 不正确的邮件不被接受；
-	④ 【附件要求】所有的作业以附件递交，附件版面为 A4，格式为：PDF，来源可以 为 Word，LaTex 等，不做限制。 
+	③ 【递交要求】title：【19200100 王海康】数据库 2022M01 作业 ==注意：邮件 title 不正确的邮件不被接受；==
+	④ 【附件要求】**所有的作业以附件递交，附件版面为 A4，格式为：PDF，来源可以 为 Word，LaTex 等，不做限制。** 
 
 **作业：** 
 1. 检索与查询的区别与联系；（R） 
