--- a/2022M02/(2) Homework  DDL-20220916-2359.md
+++ b/2022M02/(2) Homework  DDL-20220916-2359.md
@@ -3,9 +3,9 @@
 2. 本次作业以坚果云收件箱方式递交
 3. 所有的作业（书面递交标注（R）的，无标记不用递交）
 
-	① 【截止时间】请于：==2022 年 09 月 16 日 23：59（GMT+8）==
-	② 【递交方式】通过坚果云进行递交，递交至链接 https://workspace.jianguoyun.com/inbox/collect/18e0a0b45b7244179 6a91ea8842866bd/submitv2
-	③ 【递交要求】作业 title：【19200100 王海康】数据库 2022M02 作业 ==注意：作业 title 不正确的作业不被接受；==
+	① 【截止时间】请于：2022 年 09 月 16 日 23：59（GMT+8）  
+	② 【递交方式】通过坚果云进行递交，递交至链接 https://workspace.jianguoyun.com/inbox/collect/18e0a0b45b7244179 6a91ea8842866bd/submitv2  
+	③ 【递交要求】作业 title：【19200100 王海康】数据库 2022M02 作业 注意：作业 title 不正确的作业不被接受；  
 	④ 【附件要求】**1. 作业一请将思维导图导出为常用的图片文件格式（png、jpg 等），与作业二合并成一个 PDF。 2. 作业二调研报告请参考“报告模板”和“参考文献格式”进行撰写，以附件方式递交，附件版面为 A4，格式为：PDF，来源可以为 Word， LaTex 等，不做限制。**
 
 **作业：** 
