--- a/2022M03/(3) Homework  DDL-20220930-2359.md
+++ b/2022M03/(3) Homework  DDL-20220930-2359.md
@@ -3,11 +3,11 @@
 2. 本次作业以 commit 到 GitHub的方式递交，具体请参考[作业递交指南](https://github.com/njnucsta2022/DB2022FALL/blob/main/Homework_Submission_Guidelines.pdf)
 3. 所有的作业（书面递交标注（R）的，无标记不用递交）
 
-	① 【截止时间】请于：==2022 年 09 月 30 日 23：59（GMT+8）==
+	① 【截止时间】请于：2022 年 09 月 30 日 23：59（GMT+8）  
 	② 【递交方式】通过git上传至GitHub仓库，并将作业放置/DB2022FALL/2022M03/路径下
-		==注意：递交路径不正确的作业将不被接受；==
+		注意：递交路径不正确的作业将不被接受；  
 	③ 【递交要求】作业 title：【19200100 王海康】数据库 2022M03 作业
-		==注意：作业 title 不正确的作业不被接受；==
+		注意：作业 title 不正确的作业不被接受；  
 	④ 【附件要求】**1. 实验报告符合学术写作的排版要求，请参考Report Template的排版格式。2.实验报告内容详实，采用图文混合的方式叙述安装和配置过程。递交作业每页需在页面底端标注页码并居中，版面为 A4，格式为：PDF，来源可以为 Word， LaTex 等，不做限制。**
 
 **作业：** 
