--- a/2022M03/(3) Homework  DDL-20220930-2359.md
+++ b/2022M03/(3) Homework  DDL-20220930-2359.md
@@ -1,4 +1,5 @@
-# 【2022M03】数据库原理课后练习 作业要求： 
+# 【2022M03】数据库原理课后练习 
+**要求：** 
 1. 作业分为书面作业与灵活作业，所有的书面作业都必须留痕递交； 
 2. 本次作业以 commit 到 GitHub的方式递交，具体请参考[作业递交指南](https://github.com/njnucsta2022/DB2022FALL/blob/main/Homework_Submission_Guidelines.pdf)
 3. 所有的作业（书面递交标注（R）的，无标记不用递交）
