--- a/2022M02/(2) Homework  DDL-20220916-2359.md
+++ b/2022M02/(2) Homework  DDL-20220916-2359.md
@@ -1,4 +1,5 @@
-# 【2022M02】数据库原理课后练习 作业要求： 
+# 【2022M02】数据库原理课后练习 
+**要求：** 
 1. 作业分为书面作业与灵活作业，所有的书面作业都必须留痕递交；
 2. 本次作业以坚果云收件箱方式递交
 3. 所有的作业（书面递交标注（R）的，无标记不用递交）
