--- a/2022M04/(4) Homework  DDL-20221017-2359.md
+++ b/2022M04/(4) Homework  DDL-20221017-2359.md
@@ -10,7 +10,7 @@
 		**注意：递交路径不正确的作业将不被接受；**  
 	③ 【递交要求】作业只能一个文件，作业 title：【19200100 王海康】数据库 2022M03 作业	
 		**注意：作业 title 不正确的作业不被接受**；  
-	④ 【附件要求】作业格式为：**Markdown**，文件名的末尾(.md)。文档内容格式参考[Report_Template](https://github.com/njnucsta2022/DB2022FALL/blob/main/2022M03/Report_Template.md)。
+	④ 【附件要求】作业格式为：**Markdown**，文件名的末尾(.md)，可用Typora, Obsidian等，不做限制。文档内容格式参考[Report_Template](https://github.com/njnucsta2022/DB2022FALL/blob/main/2022M03/Report_Template.md)。
 
 **作业：** 
 1. 阅读“Column oriented database”相关材料（自己通过互联网查找）；
@@ -18,7 +18,7 @@
 3. 阅读“论骑车穿越美国与实现Postgres的相通之处”相关材料，谈谈自己的想法。（篇幅不限）（R）
 
 **参考资料：**
-1. [Out of order database engine]()
-2. [论骑车穿越美国与实现Postgres的相通之处]()
+1. [Out of order database engine.pdf](https://github.com/njnucsta2022/DB2022FALL/blob/main/Resources/%E3%80%90%E9%98%85%E8%AF%BB%E6%9D%90%E6%96%99%E3%80%91outoforder%20database.pdf)
+2. [论骑车穿越美国与实现Postgres的相通之处.pdf](https://github.com/njnucsta2022/DB2022FALL/blob/main/Resources/%E3%80%90%E9%98%85%E8%AF%BB%E6%9D%90%E6%96%99%E3%80%91%5B2015CCF%5D%20%E8%AE%BA%E9%AA%91%E8%BD%A6%E7%A9%BF%E8%B6%8A%E7%BE%8E%E5%9B%BD%E4%B8%8E%E5%AE%9E%E7%8E%B0Postgres%E7%9A%84%E7%9B%B8%E9%80%9A%E4%B9%8B%E5%A4%84.pdf)
 
 答疑邮箱：gu@njnu.edu.cn , title: 【19200100 王海康】关于“xxx 的问题”。
