--- a/2022M05/(5) Homework  DDL-20221024-2359.md
+++ b/2022M05/(5) Homework  DDL-20221024-2359.md
@@ -5,21 +5,17 @@
 2. 本次作业以 commit 到 GitHub的方式递交，具体请参考[作业递交指南](https://github.com/njnucsta2022/DB2022FALL/blob/main/Homework_Submission_Guidelines.pdf)
 3. 所有的作业（书面递交标注（R）的，无标记不用递交）
 
-	① 【截止时间】2022 年 10 月 17 日 23：59（GMT+8）  
-	② 【递交方式】通过git上传至GitHub仓库，并将作业放置/2022M04/路径下。保证每次作业路径命名方式统一，即若上次作业路径命名为2022W3，则本次作业路径为2022W4。
+	① 【截止时间】2022 年 10 月 24 日 23：59（GMT+8）  
+	② 【递交方式】通过git上传至GitHub仓库，并将作业放置/2022M05/路径下。保证每次作业路径命名方式统一。
 		**注意：递交路径不正确的作业将不被接受；**  
-	③ 【递交要求】作业只能一个文件，作业 title：【19200100 王海康】数据库 2022M03 作业	
+	③ 【递交要求】作业只能一个文件，作业 title：【19200100 王海康】数据库 2022M05 作业	
 		**注意：作业 title 不正确的作业不被接受**；  
-	④ 【附件要求】作业格式为：**Markdown**，文件名的末尾(.md)，可用Typora, Obsidian等，不做限制。文档内容格式参考[Report_Template](https://github.com/njnucsta2022/DB2022FALL/blob/main/2022M03/Report_Template.md)。
+	④ 【附件要求】作业格式为：**Markdown**，文件名的末尾(.md)，可用Typora, Obsidian等，不做限制。文档内容格式参考[Report_Template](https://github.com/njnucsta2022/DB2022FALL/blob/main/2022M03/Report_Template.md),每个问题用一级标题，问题中的子问题用二级标题，如（2.1、2.2）。
 
 **作业：** 
-1. 阅读“About Chinese Community__PostgreSQL中文社区_ 世界上功能最强大的开源数据库”相关材料，并总结PostgreSQL的特性；（R）
-2. 阅读[PostgreSQL13.1-CN-v1.0](https://github.com/njnucsta2022/DB2022FALL/blob/main/Resources/%5Bebook%5D%20PostgreSQL13.1-CN-v1.0.pdf)，熟悉并掌握PostgreSQL中SQL语句及相关操作，为之后实验打下基础；
-3. 回答以下问题并汇总在一个Markdown文件中，每个问题用二级标题：1.试述关系模型的概念。2.关系模型的三个要素。3.关系的完整性约束有哪些？4.试述SQL语言的特点。5.基本关系有哪些性质？6.什么是等值连接？什么是自然连接？（R）
+1. 阅读[About Chinese Community__PostgreSQL中文社区_ 世界上功能最强大的开源数据库](https://github.com/njnucsta2022/DB2022FALL/blob/main/Resources/%E3%80%90%E9%98%85%E8%AF%BB%E6%9D%90%E6%96%99%E3%80%91About%20Chinese%20Community__PostgreSQL%E4%B8%AD%E6%96%87%E7%A4%BE%E5%8C%BA_%20%E4%B8%96%E7%95%8C%E4%B8%8A%E5%8A%9F%E8%83%BD%E6%9C%80%E5%BC%BA%E5%A4%A7%E7%9A%84%E5%BC%80%E6%BA%90%E6%95%B0%E6%8D%AE%E5%BA%93.._.pdf)相关材料，并总结PostgreSQL的特性；（R）
+2. 回答以下问题并汇总在一个Markdown文件中，每个问题用**二级标题**：1.试述关系模型的概念。2.关系模型的三个要素。3.关系的完整性约束有哪些？4.试述SQL语言的特点。5.基本关系有哪些性质？6.什么是等值连接？什么是自然连接？（R）
+3. 阅读[PostgreSQL13.1-CN-v1.0](https://github.com/njnucsta2022/DB2022FALL/blob/main/Resources/%5Bebook%5D%20PostgreSQL13.1-CN-v1.0.pdf)，熟悉并掌握PostgreSQL中SQL语句及相关操作，为之后实验打下基础；
 
-
-**参考资料：**
-1. [Out of order database engine.pdf](https://github.com/njnucsta2022/DB2022FALL/blob/main/Resources/%E3%80%90%E9%98%85%E8%AF%BB%E6%9D%90%E6%96%99%E3%80%91outoforder%20database.pdf)
-2. [论骑车穿越美国与实现Postgres的相通之处.pdf](https://github.com/njnucsta2022/DB2022FALL/blob/main/Resources/%E3%80%90%E9%98%85%E8%AF%BB%E6%9D%90%E6%96%99%E3%80%91%5B2015CCF%5D%20%E8%AE%BA%E9%AA%91%E8%BD%A6%E7%A9%BF%E8%B6%8A%E7%BE%8E%E5%9B%BD%E4%B8%8E%E5%AE%9E%E7%8E%B0Postgres%E7%9A%84%E7%9B%B8%E9%80%9A%E4%B9%8B%E5%A4%84.pdf)
 
 答疑邮箱：gu@njnu.edu.cn , title: 【19200100 王海康】关于“xxx 的问题”。
