--- a/2022M06/(6) Homework  DDL-20221031-2359.md
+++ b/2022M06/(6) Homework  DDL-20221031-2359.md
@@ -14,9 +14,9 @@
 
 **作业：** 
 采用自动生成记录的方法在Student、Course和SC中分别插入100万、1万和1000万条记录。 
-（1）	要求满足实体完整性、参照完整性约束要求。
-（2）	采用曲线图展示不同数据量情况下完成插入记录的性能表现。
-（3）	可以根据所用计算机性能调整记录总数。
+1. 要求满足实体完整性、参照完整性约束要求。
+2. 采用曲线图展示不同数据量情况下完成插入记录的性能表现。
+3. 可以根据所用计算机性能调整记录总数。
 
 *Tip：Win+Shift+S 在Windows中可以快速截屏。*
 
