--- a/2022M06/(6) Homework  DDL-20221031-2359.md
+++ b/2022M06/(6) Homework  DDL-20221031-2359.md
@@ -1,4 +1,4 @@
-# 【2022M05】数据库原理课后练习
+# 【2022M06】数据库原理课后练习
 
 **要求：**
 1. 作业分为书面作业与灵活作业，所有的书面作业都必须留痕递交； 
@@ -13,7 +13,7 @@
 	④ 【附件要求】作业格式为：**Markdown**，文件名的末尾(.md)，可用Typora, Obsidian等，不做限制。文档内容格式参考[Report_Template](https://github.com/njnucsta2022/DB2022FALL/blob/main/2022M03/Report_Template.md),每个问题用一级标题，问题中的子问题用二级标题，如（2.1、2.2）。
 
 **作业：** 
-采用自动生成记录的方法在Student、Course和SC中分别插入100万、1万和1000万条记录。 
+采用自动生成记录的方法在Student、Course和SC中分别插入100万、1万和1000万条记录。（R）
 1. 要求满足实体完整性、参照完整性约束要求。
 2. 采用曲线图展示不同数据量情况下完成插入记录的性能表现。
 3. 可以根据所用计算机性能调整记录总数。
