--- a/2022M07/(7) Homework  DDL-20221218-2359.md
+++ b/2022M07/(7) Homework  DDL-20221218-2359.md
@@ -8,15 +8,18 @@
 	① 【截止时间】2022 年 12 月 18 日 23：59（GMT+8）  
 	② 【递交方式】通过git上传至GitHub仓库，并将作业放置/2022M07/路径下。保证每次作业路径命名方式统一。
 		**注意：递交路径不正确的作业将不被接受；**  
-	③ 【递交要求】作业只能一个文件，作业 title：【19200100 王海康】数据库 2022M06作业	
+	③ 【递交要求】作业为两个文件，作业 title：【19200100 王海康】数据库 2022M07作业.XX
 		**注意：作业 title 不正确的作业不被接受**；  
-	④ 【附件要求】作业格式为：**PDF**，可用Latex，Word等，不做限制。文档内容格式请注意。
+	④ 【附件要求】作业格式为：**PDF**与**SQL**，PDF可用Latex，Word等，不做限制；SQL文件后缀为（.sql）。
 
 **作业：** 
 
-完成
+完成[图书借阅系统数据库设计](https://github.com/njnucsta2022/DB2022FALL/blob/main/2022M07/LibraryDatabase.pdf)，完成每道例题。并注意每道报告文档内容格式为：
+1. 【例XX-XX】题目要求
+2. SQL语句
+3. 测试结果截图
 
-
-*Tip：Win+Shift+S 在Windows中可以快速截屏。*
+完成后整理为一个PDF文件，SQL语句放在一个.sql文件，注意命名要求（见上方要求说明）
+*期限为一个月，Take it Easy and Try your Best*
 
 答疑邮箱：gu@njnu.edu.cn , title: 【19200100 王海康】关于“xxx 的问题”。
